--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
     <style>
-        /* 這部分 CSS 與前一版完全相同，確保了最終的視覺設計 */
+        /* CSS 部分完全沒有變更 */
         :root {
             --bg-gradient: radial-gradient(circle at 10% 20%, rgb(226, 240, 254) 0%, rgb(213, 224, 255) 90%);
             --card-bg: rgba(255, 255, 255, 0.45);
@@ -188,16 +188,14 @@
 </head>
 
 <body>
+    <!-- HTML 結構完全沒有變更 -->
     <div class="container safe-area-padding py-4">
-        <!-- HTML 變更：地點資訊改為預留的空白容器，由 JS 動態填入 -->
         <div class="glass-card mb-4">
             <div class="card-body text-center py-3">
                 <h5 class="card-title fw-bold mb-0" id="officeNameDisplay">讀取中...</h5>
                 <h6 class="card-subtitle" id="deptNameDisplay" style="color: var(--text-muted-color);"></h6>
             </div>
         </div>
-
-        <!-- 以下的 HTML 結構與前一版完全相同 -->
         <div class="glass-card mb-4">
             <div class="card-body text-center py-4">
                 <h4 class="card-title fw-bold mb-1">清潔意見回饋</h4>
@@ -290,10 +288,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-        // ========== 全新：動態載入資料的核心 ==========
         const SCRIPT_URL = 'APPS_SCRIPT_URL_PLACEHOLDER';
-
-        // 建立全域變數來儲存從網址讀取的資料
         let deptId, officeId, officeName;
 
         document.addEventListener('DOMContentLoaded', function () {
@@ -301,18 +296,22 @@
             deptId = urlParams.get('deptId') || '未知部門';
             officeId = urlParams.get('officeId') || '未知編號';
             officeName = urlParams.get('officeName') || '未知地點';
-
-            // 更新後的顯示邏輯
             document.getElementById('officeNameDisplay').textContent = officeName;
             document.getElementById('deptNameDisplay').textContent = deptId;
         });
-        // ===============================================
 
         document.querySelectorAll('.glass-card').forEach(card => { card.addEventListener('mousemove', e => { const rect = card.getBoundingClientRect(); const x = e.clientX - rect.left; const y = e.clientY - rect.top; card.style.setProperty('--mouse-x', `${x}px`); card.style.setProperty('--mouse-y', `${y}px`); }); });
-        $('.rating-card').on('click', function () { $('.rating-card').removeClass('selected'); $(this).addClass('selected').find('input[type="radio"]').prop('checked', true); });
-        $('.unsat-item-card').on('click', function () { $(this).toggleClass('selected'); const checkbox = $(this).find('input[type="checkbox"]'); checkbox.prop('checked', !checkbox.prop('checked')); });
 
-        // 送出邏輯：現在會使用從網址讀取到的全域變數
+        $('.rating-card').on('click', function () { $('.rating-card').removeClass('selected'); $(this).addClass('selected').find('input[type="radio"]').prop('checked', true); });
+
+        // *** 關鍵修復 ***
+        // 我們監聽 input 的 change 事件，而不是 label 的 click 事件
+        // 這樣可以完美利用瀏覽器的預設行為
+        $('.unsat-item-card input[type="checkbox"]').on('change', function () {
+            $(this).closest('.selectable-card').toggleClass('selected', $(this).is(':checked'));
+        });
+
+        // 送出邏輯 (完全沒有變更)
         $('#submitBtn').on('click', function () { const submitButton = $(this); const rating = $('input[name="btnradio"]:checked').val(); if (!rating) { $('#alertModalBody').html('請先為我們的服務評分，謝謝！<br>Please select a rating before submitting.'); new bootstrap.Modal(document.getElementById('alertModal')).show(); return; } submitButton.prop('disabled', true).text('傳送中... (Submitting...)'); const unsatisfiedItems = {}; $('input[name="unsatisfiedItems"]:checked').each(function () { unsatisfiedItems[this.value] = '是'; }); const data = { deptId: deptId, officeId: officeId, officeName: officeName, rating: rating, item1: unsatisfiedItems['辦公區域髒亂'] || '否', item2: unsatisfiedItems['會議室髒亂'] || '否', item3: unsatisfiedItems['茶水間髒亂'] || '否', item4: unsatisfiedItems['梯廳樓梯髒亂'] || '否', item5: unsatisfiedItems['廁所環境髒亂'] || '否', otherMessage: $('#otherMessage').val() || '' }; fetch(SCRIPT_URL, { method: 'POST', mode: 'cors', body: JSON.stringify(data), headers: { 'Content-Type': 'application/json' } }).then(response => { $('#alertModalBody').html('感謝您的回饋，您的意見是我們進步的動力！<br>Thank you for your feedback!'); const successModal = new bootstrap.Modal(document.getElementById('alertModal')); successModal.show(); document.getElementById('alertModal').addEventListener('hidden.bs.modal', function () { document.body.innerHTML = '<div style="text-align:center; padding-top: 50px; color: var(--text-color);"><h1>提交成功 (Success)</h1><p>您可以關閉此分頁了 (You may now close this page)</p></div>'; }, { once: true }); }).catch(error => { $('#alertModalBody').html('傳送失敗，請稍後再試。<br>Submission failed. Please try again later.'); new bootstrap.Modal(document.getElementById('alertModal')).show(); submitButton.prop('disabled', false).text('送出意見'); }); });
     </script>
 </body>
