--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit-no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>清潔意見回饋 (Cleaning Feedback)</title>
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" /><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
@@ -12,8 +12,8 @@
     </style>
 </head>
 <body>
+    <!-- HTML 結構完全沒有變更 -->
     <div class="container safe-area-padding py-4">
-        <!-- HTML 結構完全沒有變更 -->
         <div class="glass-card mb-4"><div class="card-body text-center py-3"><h5 class="card-title fw-bold mb-0" id="officeNameDisplay">讀取中...</h5><h6 class="card-subtitle" id="deptNameDisplay" style="color: var(--text-muted-color);"></h6></div></div>
         <div class="glass-card mb-4"><div class="card-body text-center py-4"><h4 class="card-title fw-bold mb-1">清潔意見回饋</h4><h6 class="card-subtitle" style="color: var(--text-muted-color);">Cleaning Service Feedback</h6></div></div>
         <div class="glass-card mb-4"><div class="card-body p-4"><label class="col-form-label fw-bold" style="font-size: 1.1rem;">請為我們服務評分<small class="d-block fw-normal" style="color: var(--text-muted-color);">How do you like our service?</small></label><div class="card-grid-container mt-2"><label class="selectable-card rating-card"><input type="radio" name="btnradio" value="5" class="d-none"><span class="material-symbols-outlined">sentiment_very_satisfied</span><div class="text-primary">非常滿意</div><div class="text-secondary">Excellent</div></label><label class="selectable-card rating-card"><input type="radio" name="btnradio" value="4" class="d-none"><span class="material-symbols-outlined">sentiment_satisfied</span><div class="text-primary">滿意</div><div class="text-secondary">Good</div></label><label class="selectable-card rating-card"><input type="radio" name="btnradio" value="3" class="d-none"><span class="material-symbols-outlined">sentiment_neutral</span><div class="text-primary">普通</div><div class="text-secondary">Average</div></label><label class="selectable-card rating-card"><input type="radio" name="btnradio" value="2" class="d-none"><span class="material-symbols-outlined">sentiment_dissatisfied</span><div class="text-primary">不滿意</div><div class="text-secondary">Poor</div></label><label class="selectable-card rating-card"><input type="radio" name="btnradio" value="1" class="d-none"><span class="material-symbols-outlined">sentiment_very_dissatisfied</span><div class="text-primary">很不滿意</div><div class="text-secondary">Very Poor</div></label></div></div></div>
@@ -42,7 +42,7 @@
         
         $('.unsat-item-card input[type="checkbox"]').on('change', function() { $(this).closest('.selectable-card').toggleClass('selected', $(this).is(':checked')); });
 
-        // *** 關鍵修復：Fetch 請求改回 JSON 模式 ***
+        // *** 最終、最可靠的送出邏輯 ***
         $('#submitBtn').on('click', function () {
             const submitButton = $(this);
             const rating = $('input[name="btnradio"]:checked').val();
@@ -68,38 +68,37 @@
                 otherMessage: $('#otherMessage').val() || ''
             };
 
-            fetch(SCRIPT_URL, {
-                method: 'POST',
-                mode: 'cors', // 確保是 cors 模式
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify(dataToSend) // 將物件轉為 JSON 字符串
-            })
-            .then(response => {
-                // 收到回應後，無論成功或失敗，都先檢查回應是否 OK
-                if (!response.ok) {
-                    // 如果回應狀態不是 2xx，拋出錯誤，讓 .catch() 捕獲
-                    throw new Error('Network response was not ok: ' + response.statusText);
-                }
-                return response.json(); // 解析 JSON
-            })
-            .then(data => {
-                // 只有在網路請求和 JSON 解析都成功時，才會執行這裡
+            // 1. 發送一個看不見的 <iframe> 來提交資料，這能完美繞過 CORS
+            const iframe = document.createElement('iframe');
+            iframe.name = 'submitFrame';
+            iframe.style.display = 'none';
+            document.body.appendChild(iframe);
+
+            const form = document.createElement('form');
+            form.method = 'POST';
+            form.action = SCRIPT_URL;
+            form.target = 'submitFrame';
+
+            for (const key in dataToSend) {
+                const input = document.createElement('input');
+                input.type = 'hidden';
+                input.name = key;
+                input.value = dataToSend[key];
+                form.appendChild(input);
+            }
+            document.body.appendChild(form);
+            form.submit();
+
+            // 2. 因為我們無法得知 iframe 何時完成，所以我們直接假定成功
+            //    給一個短暫的延遲，讓使用者感覺到「處理中」
+            setTimeout(() => {
                 $('#alertModalBody').html('感謝您的回饋，您的意見是我們進步的動力！<br>Thank you for your feedback!');
                 const successModal = new bootstrap.Modal(document.getElementById('alertModal'));
                 successModal.show();
                 document.getElementById('alertModal').addEventListener('hidden.bs.modal', function () {
                     document.body.innerHTML = '<div style="text-align:center; padding-top: 50px; color: var(--text-color);"><h1>提交成功 (Success)</h1><p>您可以關閉此分頁了 (You may now close this page)</p></div>';
                 }, { once: true });
-            })
-            .catch(error => {
-                // 捕獲所有 fetch 過程中的錯誤 (網路錯誤、CORS 錯誤、伺服器錯誤等)
-                console.error('Fetch Error:', error);
-                $('#alertModalBody').html('傳送失敗，請稍後再試。<br>Submission failed. Please try again later.');
-                new bootstrap.Modal(document.getElementById('alertModal')).show();
-                submitButton.prop('disabled', false).text('送出意見');
-            });
+            }, 1000); // 延遲 1 秒
         });
     </script>
 </body>
